test/while/var_in_body.lox
while (true) var foo; // error: expected expression
